--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p id="err" class="error"></p>
 
   <script>
-    const PASSWORD = "U9jqL!Pz"; // <-- change this
+    const PASSWORD = "Er!?@43Ma296GG!!5"; // <-- change this
     function check(){
       const val = document.getElementById("pw").value;
       if(val === PASSWORD){
